basic CSS; still a few error

--- a/my-react-template/src/App.css
+++ b/my-react-template/src/App.css
@@ -1,42 +1,55 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*, *::before, *::after{
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  margin: 0;
+  background-color: #212020;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator-grid{
+  display: grid;
+  margin-top: 2rem;
+  grid-template-columns: repeat(4, 6rem);
+  grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
+  border-radius: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.span-two{
+  grid-column: span 2;
 }
 
-.card {
-  padding: 2em;
+.output{
+  grid-column: 1/-1;
+  background-color: #90878E;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding: .75rem;
+  word-wrap: break-word;
+  word-break: break-all;
+
 }
 
-.read-the-docs {
-  color: #888;
+.calculator-grid > button{
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid #212020;
+  outline: none;
+  background-color: #212020;
+
+}
+.calculator-grid > button:hover,
+.calculator-grid > button:focus{
+  background-color: #3c3b3b;
+}
+
+.output .previous-operand{
+  color: rgba(255, 255, 255, .75);
+  font-size: 1.5rem;
+}
+.output .current-operand{
+  color: white;
+  font-size: 2.5rem;
 }
